[JENKINS-63766] Work around JDK-8231454